--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meu primeiro Site</title>
+    <title>Pokedex</title>
 
     <!-- Normalize css -->
     <link
@@ -31,7 +31,7 @@
   <body>
     <section class="content">
       <h1>Pokedex</h1>
-      <ol class="pokemons">
+      <ol id="pokemonList" class="pokemons">
         <li class="pokemon">
           <span class="number">#001</span>
           <span class="name">Bulbasaur</span>
@@ -52,6 +52,7 @@
       </ol>
     </section>
 
+    <script src="./assets/js/poke-api.js"></script>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
