--- a/index.html
+++ b/index.html
@@ -31,27 +31,17 @@
   <body>
     <section class="content">
       <h1>Pokedex</h1>
-      <ol id="pokemonList" class="pokemons">
-        <li class="pokemon">
-          <span class="number">#001</span>
-          <span class="name">Bulbasaur</span>
+      <ol id="pokemonList" class="pokemons"></ol>
 
-          <div class="detail">
-            <ol class="types">
-              <li class="type">grass</li>
-              <li class="type">poison</li>
-            </ol>
+      <div class="pagination">
+        <button id="loadMoreButton" type="button">
+          Load More
+        </button>
+      </div>
 
-            <img
-              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
-              alt="Bulbasaur"
-            />
-          </div>
-        </li>
 
-      </ol>
     </section>
-
+    <script src="./assets/js/pokemon-model.js"></script>
     <script src="./assets/js/poke-api.js"></script>
     <script src="./assets/js/main.js"></script>
   </body>
